# takon_mcp_core

./: .gitignore  AGENTS.md  README.md  REPORT_template_00.xlsx  install_mcp.ps1  manifest.json  mcp.json  plugin.json  pyproject.toml
src/takon_mcp_core/: cad.py  construction.py
